--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -47,5 +47,14 @@
     <string name="chance_text14">迎宾美女</string>
     <string name="chance_text15">工作内容 工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容工作内容</string>
     <string name="chance_text16">和发布者私聊</string>
+    
+        <string name="work_price">价   格:</string>
+    <string name="work_address">所在地:</string>
+    <string name="work_context">工作内容:</string>
+    <string name="work_payment">结算方式:</string>
+    <string name="work_num">数量：</string>
+    <string name="work_input">输入数值</string>
+    <string name="work_data">工作日期:</string>
+    <string name="work_next">立即预约</string>
 
 </resources>
