添加 动态 下拉刷新

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -117,4 +117,10 @@
     <string name="dissolution_group_hint">退出后，此群将被解散</string>
       <string name="exit_group">退出</string>
       <string name="connect_conflict">同一帐号已在其他设备登录</string>
+          <string name="pull_to_refresh_pull_label">下拉刷新</string>
+    <string name="pull_to_refresh_release_label">松开后刷新</string>
+    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
+    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
+    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
+    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
 </resources>
